--- a/style.css
+++ b/style.css
@@ -68,8 +68,9 @@ header{
 
 .menu-toggle-btn{
   float: right;
-  height: 90px;
-  line-height: 90px !important;
+  height: 120px;
+  line-height: 120px !important;
+  margin-right: 15px;
   color: #fff;
   font-size: 26px;
   display: none !important;
@@ -84,13 +85,14 @@ header{
   .navigation-menu{
     position: fixed;
     width: 100%;
-    max-width: 400px;
+    max-width: 320px;
     background: #34495e;
     top: 90px;
     right: 0;
     display: none;
     padding: 20px 40px;
     box-sizing: border-box;
+    border-radius: 4px;
   }
 
   .navigation-menu::before{
@@ -100,7 +102,7 @@ header{
     border-bottom: 10px solid #34495e;
     position: absolute;
     top: -10px;
-    right: 10px;
+    right: 15px;
   }
 
   .navigation-menu a{
