--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ html, body{
   background: #2980b9;
 }
 
+.version{
+  font-size: 23px;
+  color: #fff;
+  float: left;
+  margin-left: 20px;
+  margin-top: 45px;
+}
+
 header{
   height: 120px;
   background: #2f3640;
